Add missing events and update api docs
