# apps/form-service/src/form/model/form.ts
@@ -216,6 +216,10 @@ export class FormEntity implements Form {
       throw new UnauthorizedUserError('unlock form', user);
     }
 
+    if (this.status === FormStatus.Draft) {
+      throw new InvalidOperationError('form is already in draft');
+    }
+
     if (this.status !== FormStatus.Submitted) {
       throw new InvalidOperationError('Can only set submitted forms to draft');
     }
@@ -226,7 +230,7 @@ export class FormEntity implements Form {
     return await this.repository.save(this);
   }
 
-  async submit(user: User, submissionRepository: FormSubmissionRepository): Promise<FormEntity> {
+  async submit(user: User, submissionRepository: FormSubmissionRepository): Promise<Form> {
     if (this.status !== FormStatus.Draft) {
       throw new InvalidOperationError('Cannot submit form not in draft.');
     }
@@ -249,8 +253,10 @@ export class FormEntity implements Form {
       // If disposition states exist, create a form submission record
       await FormSubmissionEntity.create(user, submissionRepository, this, id);
     }
-
-    return await this.repository.save(this);
+    // We need the submissionId so that it is available for updates/lookups of the submission.
+    const savedFormEntity = await this.repository.save(this);
+    const formData: Form = { ...savedFormEntity, submissionId: id };
+    return formData;
   }
 
   async archive(user: User): Promise<FormEntity> {
